# menti_project

./: .coverage  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: ca7d9cce9a8e_initial_migration.py
src/: main.py
src/app/: main.py
src/app/core/: config.py  db.py
src/app/models/: models_deposit.py
src/app/routers/: deposit.py
src/app/services/: deposit_calculator.py
src/routers/: deposit.py
src/services/: deposit_calculator.py
src/tests/: test_calculate_deposit.py  test_endpoint.py
