[tool.poetry]
name = "deposit-service"
version = "0.1.0"
description = "A FastAPI service for deposit calculation"
authors = ["Роман Кущев <your-email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"