[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = "A FastAPI project with PostgreSQL and Alembic"
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.5"
uvicorn = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.20.2"
alembic = "^1.11.0"
black = "^23.1.0"
isort = "^5.11.0"
mypy = "^1.4.0"

[build-system]
requires = ["poetry>=1.2.0"]
build-backend = "poetry.core.masonry.api"
